src/main/java/org/example/Solid/good/s/SRP_good.java
package org.example.Solid.good.s;

public class SRP_good {
}
