src/main/java/org/example/Solid/bad/s/SRP_bad.java
package org.example.Solid.bad.s;

public class SRP_bad {
}
